--- a/angular-app/src/app/container/meter.component.css
+++ b/angular-app/src/app/container/meter.component.css
@@ -20,6 +20,7 @@ body {
   flex-flow: column;
   bottom: 0;
   z-index: -1;
+  overflow-y: hidden;
 }
 
 .app-container {
